fixed contrast on text when no results are found in a-z list

--- a/web/sites/default/themes/ubnext/less/az.less
+++ b/web/sites/default/themes/ubnext/less/az.less
@@ -95,7 +95,7 @@
 	#terms-search-results {
 		.no-result {
 	      font-size: 1.2em;
-	      color: @gray-light;
+	      color: #757575;
 	      display: none;
 	    }
 	    &.no-result {
